--- a/mongodb/04_webapp.yaml
+++ b/mongodb/04_webapp.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: webapp-deployment
+  namespace: mongo_application
   labels:
     app: webapp
 spec:
@@ -40,6 +41,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: webapp-service #endpoint to access
+  namespace: mongo_application
 spec:
   type: NodePort
   selector: #select pods to forward the request to
