--- a/mongodb/03_mongo.yaml
+++ b/mongodb/03_mongo.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mongo-deployment
+  namespace: mongo_application
   labels:
     app: mongo
 spec:
@@ -36,6 +37,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mongo-service #endpoint to access
+  namespace: mongo_application
 spec:
   selector: #select pods to forward the request to
     app: mongo #should match the pods label
