--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -69,6 +69,7 @@ stages:
             displayName: Deploy to Kubernetes cluster
             inputs:
               action: deploy
+              namespace: mongo_application
               manifests: |
                 $(Pipeline.Workspace)/manifests/deployment.yml
                 $(Pipeline.Workspace)/manifests/service.yml
