--- a/mongodb/01_mongo-config.yaml
+++ b/mongodb/01_mongo-config.yaml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: mongo-config
-  namespace: mongo_application
+  namespace: mongoapplication
 data:
   mongo-url: mongo-service
