--- a/mongodb/03_mongo.yaml
+++ b/mongodb/03_mongo.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mongo-deployment
-  namespace: mongo_application
+  namespace: mongoapplication
   labels:
     app: mongo
 spec:
@@ -37,7 +37,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mongo-service #endpoint to access
-  namespace: mongo_application
+  namespace: mongoapplication
 spec:
   selector: #select pods to forward the request to
     app: mongo #should match the pods label
