--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -69,7 +69,7 @@ stages:
             displayName: Deploy to Kubernetes cluster
             inputs:
               action: deploy
-              namespace: mongo_application
+              namespace: mongoapplication
               manifests: |
                 $(Pipeline.Workspace)/manifests/deployment.yml
                 $(Pipeline.Workspace)/manifests/service.yml
